# backend_bot_ima

./: Cargo.toml  README.md
migrations/2022-06-02-154500_usuario/: down.sql  up.sql
migrations/2022-06-02-154521_categoria/: down.sql  up.sql
migrations/2022-06-02-154541_produto/: down.sql  up.sql
migrations/2022-06-02-154555_promo/: down.sql  up.sql
src/: main.rs
src/domain/: mod.rs  models.rs
src/routes/: mod.rs
src/webhooks/: mod.rs  whats_gupshup.rs
