[package]
name = "back_delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket  =  { version =  "0.5.0-rc.2" , features = ["json", "msgpack", "uuid"] }
tokio = { version = "1.13" , features = [ "full" ]}
reqwest = { version = "0.11" , features = [ "json" ]}
async-trait = "0.1.50"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "*"
base64 = "*"
multipart = "*"
directories = "4.0.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
cronjob = "0.3.17"
chrono = "0.4"


[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["tokio-runtime"]